code readability adjustments to index.html and style.css, fixed UI scaling

--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,15 @@ html {
 .body {
     font-family: "montserrat", sans-serif;
     padding: 50px;
+    margin: 0 auto;
+    max-width: 1000px;
     background-color: #eee;
 
 }
 
 @media(max-width: 767px) {
     .body {
-        padding: 20px;
+        padding: 10px;
     }
 }
 
